--- a/index.html
+++ b/index.html
@@ -29,20 +29,25 @@
         </div>
         <div>
             <img src="FIFA22.png">
+            <p>I love playing FIFA</p>
         </div>
         <div>
             <img src="Scrubby.png">
+            <p>I love dogs and puppy</p>
         </div>
         <div>
             <img src="Zidane.webp">
+            <p>Zidane is my favourite Icon</p>
         </div>
         <div>
             <img src="TOTY.png">
+            <p>My favourite card type is TOTY</p>
         </div>
         <div>
             <img src="0001.png">
+            <p>I play football</p>
         </div>
-   </div>
+        </div>
     
 
 </body>
